# Monight

./: .gitignore  CONTEXT.md  README.md  TAURI_IMPLEMENTATION_PLAN.md  biome.json  index.html  package-lock.json  package.json  settings.html  tsconfig.json  vite.config.ts
docs/: performance-benchmarks.md
src/: main.js  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  menu.rs
src/__tests__/: dimensions.test.ts  guards.test.ts  output-scale.test.ts  pdf-engine.test.ts  pdf-links.test.ts  performance-benchmarks.test.ts  scroll-geometry.test.ts  setup.test.ts
src/app/: dom-events.ts  file-actions.ts  keybinds.ts  presets.ts  session-state.ts  tab-state.ts  tauri-events.ts  ui.ts  viewer-helpers.ts
src/lib/: dimensions.ts  guards.ts  output-scale.ts  pdf-engine.ts  pdf-links.ts  performance-benchmarks.ts  scroll-geometry.ts
src/scripts/: filters.js  filters.ts  keybind-editor.js  keybind-editor.ts  keybind-manager.js  keybind-manager.ts  pdf-viewer.js  pdf-viewer.ts  settings-page.js  settings-page.ts  settings.js  settings.ts  sliders.js  sliders.ts  tabs.js  tabs.ts
src/styles/: configurator.css  main.css  pdf-viewer.css  tabs.css
