[package]
name = "monight"
version = "1.0.4"
description = "Monight (墨页) - A modern PDF reader"
authors = ["Monight Team"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "monight_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "~2.6.0", features = [] }

[dependencies]
tauri = { version = "~2.11.0", features = [] }
tauri-plugin-dialog = "~2.7.0"
tauri-plugin-opener = "~2.5.0"
tauri-plugin-shell = "~2.3.0"
tauri-plugin-store = "~2.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5", features = ["derive"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
